--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "hackernews-node",
+  "name": "graphql-basics",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
